<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <!-- Frame chứa các thành phần đăng ký hiện tại -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.opening.register.RegisterArtisan">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/backBtn"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/Tittle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/Tittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="96dp"
            android:text="@string/Title_register_artisan"
            android:textColor="@color/primary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Tittle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inpUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:autofillHints="password"
                    android:background="@drawable/edittext_background"
                    android:elevation="3dp"
                    android:hint="@string/hintInpUserArtisan"
                    android:inputType="text"
                    android:paddingVertical="18dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inpStoreOrBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="35dp"
                    android:autofillHints="username"
                    android:background="@drawable/edittext_background"
                    android:elevation="3dp"
                    android:hint="@string/hintInpStoreOrBrand"
                    android:inputType="text"
                    android:paddingVertical="18dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/inpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edittext_background"
                    android:elevation="3dp"
                    android:hint="@string/inpEmailText"
                    android:inputType="text"
                    android:paddingVertical="18dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/inpPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edittext_background"
                    android:elevation="3dp"
                    android:hint="@string/hintInpPhone"
                    android:inputType="phone"
                    android:paddingVertical="18dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/inpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:autofillHints="password"
                    android:background="@drawable/edittext_background"
                    android:elevation="3dp"
                    android:hint="@string/inpPassText"
                    android:inputType="textPassword"
                    android:paddingVertical="18dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:ignore="TextFields" />

                <EditText
                    android:id="@+id/inpIntroduce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="35dp"
                    android:autofillHints="password"
                    android:background="@drawable/edittext_background"
                    android:elevation="3dp"
                    android:gravity="top|start"
                    android:hint="@string/hintInpIntroduce"
                    android:inputType="textMultiLine"
                    android:maxLines="6"
                    android:minLines="5"
                    android:paddingVertical="18dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="32dp"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="35dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/addPic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="3dp"
                        android:background="@drawable/input_picture_register_artisan"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="66dp"
                            android:layout_height="46dp"
                            android:contentDescription="@string/desc_register_artisan_image"
                            app:srcCompat="@drawable/ic_register_artisan_plus" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_image" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/provide_certificate_image"
                        android:textColor="@color/light_pink" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <TextView
            android:id="@+id/imageErrorText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageRecyclerView" />

        <Button
            android:id="@+id/registerButtonArtisan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="33dp"
            android:backgroundTint="@color/btnColorPurple"
            android:text="@string/btnString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageRecyclerView" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButtonArtisan">


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/already_have_account" />

            <TextView
                android:id="@+id/ClickableText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/ClickableText"
                android:textColor="@color/primary"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Frame hiển thị khi đăng ký thành công -->
    <LinearLayout
        android:id="@+id/frameSuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            android:text="@string/text_success_pending_admin"
            android:textColor="@color/primary"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnSuccessOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="33dp"
            android:text="@string/ok" />
    </LinearLayout>
</FrameLayout>
